Fix HTTP status codes, audit trail security, and code hygiene
- Return 201 Created for POST /admin/products and POST /admin/categories
- Pull changedBy from authenticated principal in InventoryController
  instead of trusting the request body, preventing audit trail spoofing
- Consolidate duplicate ProductNotFoundException (inventory vs product
  package) into a single class; update InventoryService and
  GlobalExceptionHandler accordingly
- Add negative price validation in ProductService
- Log JWT validation failures at DEBUG level instead of silently
  swallowing exceptions
- Clean up GlobalExceptionHandler: proper imports instead of
  fully-qualified class names throughout
- Remove unused imports and modernize .collect(Collectors.toList())
  to .toList() in InventoryController