@@ -4,13 +4,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
@@ -25,24 +24,27 @@ public class InventoryController {
     @PatchMapping("/admin/inventory/{productId}/add")
     public ResponseEntity<InventoryTransactionResponse> addStock(
             @PathVariable Long productId,
-            @RequestBody InventoryChangeRequest request) {
-        InventoryTransaction transaction = inventoryService.addStock(productId, request.getQuantity(), request.getChangedBy(), request.getNote());
+            @RequestBody InventoryChangeRequest request,
+            Principal principal) {
+        InventoryTransaction transaction = inventoryService.addStock(productId, request.getQuantity(), principal.getName(), request.getNote());
         return ResponseEntity.ok(mapResponse(transaction));
     }
 
     @PatchMapping("/admin/inventory/{productId}/remove")
     public ResponseEntity<InventoryTransactionResponse> removeStock(
             @PathVariable Long productId,
-            @RequestBody InventoryChangeRequest request) {
-        InventoryTransaction transaction = inventoryService.removeStock(productId, request.getQuantity(), request.getChangedBy(), request.getNote());
+            @RequestBody InventoryChangeRequest request,
+            Principal principal) {
+        InventoryTransaction transaction = inventoryService.removeStock(productId, request.getQuantity(), principal.getName(), request.getNote());
         return ResponseEntity.ok(mapResponse(transaction));
     }
 
     @PatchMapping("/admin/inventory/{productId}/correct")
     public ResponseEntity<InventoryTransactionResponse> correctStock(
             @PathVariable Long productId,
-            @RequestBody InventoryChangeRequest request) {
-        InventoryTransaction transaction = inventoryService.correctStock(productId, request.getQuantity(), request.getChangedBy(), request.getNote());
+            @RequestBody InventoryChangeRequest request,
+            Principal principal) {
+        InventoryTransaction transaction = inventoryService.correctStock(productId, request.getQuantity(), principal.getName(), request.getNote());
         return ResponseEntity.ok(mapResponse(transaction));
     }
 
@@ -51,7 +53,7 @@ public class InventoryController {
         List<InventoryTransactionResponse> history = inventoryService.getHistory(productId)
                 .stream()
                 .map(this::mapResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(history);
     }
 
